// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Sidebar navigation should match snapshot with active link 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-1 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-1:last-child {
  margin-bottom: 24px;
}

.emotion-2 {
  margin-bottom: 24px;
}

.emotion-3 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-5 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-7 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4;
  font-weight: 600;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  box-sizing: border-box;
  color: #577FFB;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

.emotion-7:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-7:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-8 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-12 {
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 32px;
  margin-top: 20px;
}

.emotion-15 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4;
  font-weight: 600;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  box-sizing: border-box;
  color: #677483;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

.emotion-15:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-15:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 20rem;
  color: #162740;
}

<nav
    aria-label="Sidebar"
    class="emotion-0"
    role="navigation"
  >
    <ul
      class="emotion-1"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="/group1"
        >
          Group 1
        </div>
        <div
          class="emotion-2"
        >
          <div>
            <a
              class="emotion-5"
              href="/group1/page1"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-8"
          data-testid="divider"
        />
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="/group2"
        >
          Group 2
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-12"
            id="/group2/page1"
          >
            Group 2 Page 1
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page1/a"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-15"
                  data-testid="/group2/page1/a"
                >
                  Group 2 Page 1 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page1/b"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-15"
                  data-testid="/group2/page1/b"
                >
                  Group 2 Page 1 b
                </div>
              </span>
            </a>
          </div>
          <div
            class="emotion-12"
            id="/group2/page2"
          >
            Group 2 Page 2
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page2/a"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-15"
                  data-testid="/group2/page2/a"
                >
                  Group 2 Page 2 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page2/b"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-15"
                  data-testid="/group2/page2/b"
                >
                  Group 2 Page 2 b
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;

exports[`Sidebar navigation should match snapshot with no active link 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-family: 'DM Sans',sans-serif;
  font-size: 18px;
  line-height: 1.5;
  font-weight: 400;
  letter-spacing: 0;
}

.emotion-1 {
  list-style-type: none;
  margin: 0px;
  padding: 0;
}

.emotion-1:last-child {
  margin-bottom: 24px;
}

.emotion-2 {
  margin-bottom: 24px;
}

.emotion-3 {
  font-family: 'Poppins',sans-serif;
  font-size: 18px;
  line-height: 1.3333333333333333;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 40px;
  padding: 8px 0;
}

.emotion-5 {
  display: inline-block;
  transition-property: color;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0, 0, .5, 1);
  -webkit-text-decoration: none;
  text-decoration: none;
}

.emotion-5:hover:not(:disabled) {
  -webkit-text-decoration: none;
  text-decoration: none;
}

@media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
  .emotion-5 {
    vertical-align: text-bottom;
  }
}

.emotion-6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  height: 100%;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-box-pack: start;
  -ms-flex-pack: start;
  -webkit-justify-content: flex-start;
  justify-content: flex-start;
}

.emotion-7 {
  font-family: 'Poppins',sans-serif;
  font-size: 14px;
  line-height: 1.4;
  font-weight: 600;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  box-sizing: border-box;
  color: #677483;
  cursor: 'pointer';
  min-height: 32px;
  min-width: 230px;
  padding: 8px 12px;
  text-overflow: ellipsis;
}

.emotion-7:hover:not(:disabled) {
  background-color: #E0E7FF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-7:active:not(:disabled) {
  background-color: #AEBFFF;
  border-radius: 20rem;
  color: #162740;
}

.emotion-8 {
  border-style: solid;
  border-color: #E4E4E4;
  border-width: 1px;
  border-width: 0px;
  margin: 0;
  border-top-width: 1px;
  width: 100%;
}

.emotion-12 {
  font-family: 'Poppins',sans-serif;
  font-size: 16px;
  line-height: 1.5;
  font-weight: 700;
  letter-spacing: 0;
  background-color: transparent;
  color: #162740;
  min-height: 32px;
  margin-top: 20px;
}

<nav
    aria-label="Sidebar"
    class="emotion-0"
    role="navigation"
  >
    <ul
      class="emotion-1"
      role="list"
    >
      <li
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="/group1"
        >
          Group 1
        </div>
        <div
          class="emotion-2"
        >
          <div>
            <a
              class="emotion-5"
              href="/group1/page1"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group1/page1"
                >
                  Group 1 Page 1
                </div>
              </span>
            </a>
          </div>
        </div>
        <hr
          aria-hidden="true"
          class="emotion-8"
          data-testid="divider"
        />
      </li>
      <li
        class="emotion-2"
      >
        <div
          class="emotion-3"
          data-testid="/group2"
        >
          Group 2
        </div>
        <div
          class="emotion-2"
        >
          <div
            class="emotion-12"
            id="/group2/page1"
          >
            Group 2 Page 1
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page1/a"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group2/page1/a"
                >
                  Group 2 Page 1 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page1/b"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group2/page1/b"
                >
                  Group 2 Page 1 b
                </div>
              </span>
            </a>
          </div>
          <div
            class="emotion-12"
            id="/group2/page2"
          >
            Group 2 Page 2
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page2/a"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group2/page2/a"
                >
                  Group 2 Page 2 a
                </div>
              </span>
            </a>
          </div>
          <div>
            <a
              class="emotion-5"
              href="/group2/page2/b"
            >
              <span
                class="emotion-6"
              >
                <div
                  class="emotion-7"
                  data-testid="/group2/page2/b"
                >
                  Group 2 Page 2 b
                </div>
              </span>
            </a>
          </div>
        </div>
      </li>
    </ul>
  </nav>
</DocumentFragment>
`;
